--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,11 @@
 <html lang="es">
 <head>
   <meta charset="utf-8">
-  <title>Stigelmaier</title>
+  <title>MiTurno - Sistema de Gestión de Turnos Online</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
+  <link rel="icon" type="image/svg+xml" href="assets/favicon/favicon.svg">
   <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
